[project]
name = "acm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "med-ayssar", email = "med.ayssar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.0",
]

[project.scripts]
acm = "acm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
